--- a/css/styles.css
+++ b/css/styles.css
@@ -319,6 +319,7 @@ img {
   background-color: #2e2f42;
 }
 .footer-block {
+  width: 264px;
   margin-bottom: 72px;
 }
 .footer-logo {
@@ -510,22 +511,251 @@ img {
 
   .benefits-item {
     text-align: start;
+  }
 
-    .team-list {
-      flex-wrap: wrap;
-      align-items: center;
-      row-gap: 64px;
-      column-gap: 24px;
-    }
-    .team-list-card {
-      border-radius: 0 0 4px 4px;
-      box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-        0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-      background: #fff;
-    }
-    .team-item-info {
-      padding: 32px 16px;
-    }
+  .team-list {
+    flex-wrap: wrap;
+    flex-direction: row;
+    row-gap: 64px;
+    column-gap: 24px;
+    justify-content: center;
+  }
+  .social-link:hover,
+  .social-link:focus {
+    background-color: #404bbf;
+  }
+
+  .section-four {
+    padding: 96px 0 96px 0;
+  }
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .portfolio-list-item {
+    width: calc((100% - 24px) / 2);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .portfolio-list-item:last-child {
+    margin-bottom: auto;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-block {
+    margin-right: 24px;
+    margin-bottom: 112px;
+  }
+
+  .footer-sbs-email {
+    width: 264px;
+  }
+  .footer-sbs-form {
+    display: flex;
+    gap: 24px;
+  }
+  .footer-subscribe {
+    text-align: start;
+  }
+  .backdrop {
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .is-open {
+    visibility: visible;
+  }
+
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 72px 24px 24px;
+    border-radius: 4px;
+    width: 408px;
+    min-height: 584px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+      0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-btn-close {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    cursor: pointer;
+    top: 24px;
+    right: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    stroke-width: 1px;
+    background: #e7e9fc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-btn-close:hover {
+    border: none;
+    background-color: #404bbf;
+  }
+  .modal-btn-close:focus {
+    border: none;
+    background-color: #404bbf;
+  }
+  .modal-btn-close:hover > svg {
+    fill: #ffffff;
+  }
+  .modal-btn-close:focus > svg {
+    fill: #ffffff;
+  }
+
+  .modal-btn-close-icon {
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .form-header {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+  }
+  .input-field {
+    margin-bottom: 8px;
+  }
+  .input-field-comments {
+    margin-bottom: 16px;
+  }
+  .input-label {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+  }
+  .form-input {
+    background-color: transparent;
+    outline: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+    padding: 8px 16px;
+    padding-left: 38px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .form-input:focus {
+    border-color: #4d5ae5;
+  }
+  .form-input:focus + svg {
+    fill: #4d5ae5;
+  }
+  .input-comments {
+    resize: none;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 360px;
+    height: 120px;
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .input-comments:focus {
+    border-color: #4d5ae5;
+  }
+  .form-input-container {
+    position: relative;
+  }
+  .form-icons {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .checkbox-container {
+    margin-bottom: 24px;
+  }
+  .terms-checkbox-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+  }
+  .user-privacy-link {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+  }
+  .form-submit-btn {
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    margin: 0 auto;
+    display: block;
+    cursor: pointer;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .accepted-checkbox-custom {
+    fill: transparent;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .accepted-checkbox:checked + .terms-checkbox-label .accepted-checkbox-custom {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+  }
+  .accepted-checkbox-custom > svg {
+    fill: #fff;
   }
 
   /* desktop */
